--- a/templates/commentaire/index.html.twig
+++ b/templates/commentaire/index.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     <h1>Commentaire index</h1>
+    <a href="{{ path('app_home') }}">Accueil</a>
 
     <table class="table">
         <thead>
