--- a/templates/exercice/index.html.twig
+++ b/templates/exercice/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <h1>Exercice index</h1>
 
+    <a href="{{ path('app_home') }}">Accueil</a>
     <table class="table">
         <thead>
             <tr>
